example/lib/src/generated/errors/errors_localization_am.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Amharic (`am`).
class ErrorsLocalizationAm extends ErrorsLocalization {
  ErrorsLocalizationAm([String locale = 'am']) : super(locale);

  @override
  String get error => 'ስህተት ተከስቷል';

  @override
  String get unexpectedError => 'አስቸኳይ ስህተት ተከስቷል';

  @override
  String get bugReportSentText => 'በተሳካ ሁኔታ የተላከ ባግ ሪፖርት ነው.';
}
